// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Widget /> should not render when the \`type\` prop is invalid 1`] = `
<Widget
  cellSize={null}
  component={null}
  config={
    Object {
      "col": 1,
      "height": 6,
      "row": 1,
      "type": "some_widget",
      "width": 12,
    }
  }
/>
`;

exports[`<Widget /> should render an image widget 1`] = `
<Widget
  cellSize={null}
  component={[Function]}
  config={
    Object {
      "col": 1,
      "height": 6,
      "row": 1,
      "type": "@shopgate/commerce-widgets/image",
      "width": 12,
    }
  }
>
  <GridItem
    className=""
    component="div"
    grow={0}
    shrink={1}
  >
    <div
      className=""
    >
      <div
        className="css-4hpmhj"
      >
        <MyComponent
          ratio={
            Array [
              12,
              6,
            ]
          }
        >
          <div />
        </MyComponent>
      </div>
    </div>
  </GridItem>
</Widget>
`;

exports[`<Widget /> should render an image widget with offset 1`] = `
<Widget
  cellSize={100}
  component={[Function]}
  config={
    Object {
      "col": 1,
      "height": 6,
      "row": 1,
      "type": "@shopgate/commerce-widgets/image",
      "width": 6,
    }
  }
>
  <GridItem
    className="css-f819gy css-84qd44 css-1b0vnwm css-skhncj"
    component="div"
    grow={0}
    shrink={1}
  >
    <div
      className="css-f819gy css-84qd44 css-1b0vnwm css-skhncj"
    >
      <div
        className="css-4hpmhj"
      >
        <MyComponent
          ratio={
            Array [
              6,
              6,
            ]
          }
        >
          <div />
        </MyComponent>
      </div>
    </div>
  </GridItem>
</Widget>
`;
